Fix services padding on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -3941,6 +3941,12 @@ section {
         margin-bottom: 25px; }
         .service > div:nth-child(2n+2) {
           margin-right: 0; } }
+  @media (max-width: 770px) {
+    .service {
+      padding: 0 0 100px 0; } }
+  @media (max-width: 480px) {
+    .service {
+      padding: 0 0 60px 0; } }
   .service img {
     max-width: 100%; }
   @media (max-width: 770px) {
