--- a/sass/views/_page.scss
+++ b/sass/views/_page.scss
@@ -58,6 +58,14 @@ section {
 	@include grid(2);
 	grid-template-columns: 58.3% 41.6%;
 
+	@media (max-width: $container-ipad) {
+		padding: 0 0 100px 0;
+	}
+
+	@media (max-width: $container-mobile) {
+		padding: 0 0 60px 0;
+	}
+
 	img {
 		max-width: 100%;
 	}
